--- a/SOURCES/templates/kaos/layout/repostyle.css
+++ b/SOURCES/templates/kaos/layout/repostyle.css
@@ -163,3 +163,10 @@ td a:hover {
 td span {
   color: #666;
 }
+
+.pkgsize {
+  font-size: 11px;
+  font-weight: bold;
+  vertical-align: text-top;
+  white-space: nowrap;
+}
