--- a/SOURCES/templates/kaos/layout/repostyle.css
+++ b/SOURCES/templates/kaos/layout/repostyle.css
@@ -51,7 +51,7 @@ body {
 }
 
 h1, h2, h3, h4, h5 {
-  border-bottom: 1px dotted #e5e5e5; 
+  border-bottom: 1px solid #e9e9e9;
   color: #777;
   font-weight: lighter;
   padding: 8px 0 8px 0;
